infrastructure/controllers/_legacy/gateway-ingress/proxy-proto-test/nginx-workloads.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: proxy-proto-test
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
          - mountPath: /etc/nginx
            name: nginx-conf
        ports:
        - containerPort: 80
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf-proxy-proto
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: proxy-proto-test
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
