infrastructure/controllers/_legacy/gateway-ingress/proxy-proto-test/gateway-setup.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: proxy-protocol
  namespace: kgateway-system
spec:
  gatewayClassName: kgateway
  listeners:
  - protocol: HTTP
    port: 8080
    name: pp
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
  namespace: proxy-proto-test
spec:
  parentRefs:
    - name: proxy-protocol
      namespace: kgateway-system
  rules:
    - backendRefs:
        - name: nginx-service
          port: 80
